--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ body {
   .square:focus {
     outline: none;
   }
+
+  .boldText {
+    font-weight: bold;
+  }
   
   .kbd-navigation .square:focus {
     background: #ddd;
