sets up test for highlight of winning squares for tdd of feature

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ body {
     text-align: center;
     width: 34px;
   }
+
+  .winningSquare {
+    border: 2px solid red;
+  }
   
   .square:focus {
     outline: none;
